# LiftOff

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/kickstart_ai.egg-info/: PKG-INFO  SOURCES.txt
src/liftoff/: core.py  test.py
src/liftoff/utils/: file_writer.py  intent_parser.py  validator.py
utils/: meta_prompt.py  validator.py
