[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kickstart-ai"
version = "0.1.2"
description = "KickstartAI: a lightweight scaffolding engine that turns natural language prompts into full project structures."
readme = "README.md"
authors = [
  { name = "Christopher Cruz", email = "cchris2004@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "huggingface_hub>=0.20.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "openai>=1.0.0",
]


[project.urls]
Homepage = "https://github.com/cruz209/kickstart-ai"
Issues = "https://github.com/cruz209/kickstart-ai/issues"
